# QuiClick-Chrome-extension

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  README.md  devenv.nix  flake.nix  justfile  manifest.json  newtab.html  package.json  quiclick-ctl.sh  script.js  tailwind.css
.playwright/: cli.config.json
extension/: CLAUDE.md  api.js  background.js  justfile  manifest.json  newtab.html  package.json  popup.html  popup.js  script.js  styles.css  sync-queue.js  tailwind.css  vite.config.js
extension/src/: api.js  background.js  bookmarks.js  favicon.js  folders.js  main.css  newtab-app.jsx  newtab.html  newtab.jsx  popup-app.jsx  popup.html  popup.js  popup.jsx  script.js  settings.js  sync-queue.js  tailwind.css  ui.js
plans/: plan-background-worker-sync.md  plan-grid-based-positions.md  plan-monorepo-merge-integration.md  plan-quiclick-deployment-setup.md  rewrite-preact.md
server/: .gitignore  AGENTS.md  devenv.nix  pyproject.toml
server/plans/: plan-fastapi-bookmark-extension-api.md
server/quiclick_server/: auth.py  config.py  database.py  main.py  models.py  schemas.py
server/quiclick_server/routes/: bookmarks.py  changes.py  export_import.py  folders.py  reorder.py  settings.py
server/tests/: conftest.py  test_auth.py  test_bookmarks.py  test_export_import.py  test_folders.py  test_reorder.py  test_settings.py
src/: main.css
tmp/: test-drag-out.html  test-export-data.js  test-export.html  test-file-input-cleanup.js  test-folders.html  test-import-data-flow.js  test-import-data.json  test-import-validation.js  test-page.html  test-script.js
(+29 files in other folders)
