[project]
name = "quiclick-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.4.1",
    "environ-config>=24.1.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[tool.setuptools.packages.find]
include = ["quiclick_server*"]

[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
    "pytest>=8.4.1",
    "pytest-sugar>=1.0.0",
]
